--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                             <li><a href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Youtube</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Donación</a></li>
+                    <li><a href="https://buymeacoffee.com/neiverperalta">Donación</a></li>
                 </ul>
             </div>
             <div class="right-nav">
                 <a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">
                     <button class="download-btn">
-                        Descargar App
+                        Descargar gratis
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="3">
                             <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path>
                             <path d="M7 11l5 5l5 -5"></path>
@@ -52,7 +52,7 @@
             <h1>Tu Libreta de Notas Completa</h1>
             <p>Notas a tu Medida: Títulos, Listas, Multimedia y Código.</p>
             <a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">
-                <button class="download-btn primary">Descargar App</button>
+                <button class="download-btn primary">Descargar gratis</button>
             </a>
         </div>
         <div class="hero-image">
@@ -186,14 +186,9 @@
         <div class="app-info">
             <h3>Tu Libreta de Ideas</h3>
             <div class="buttons">
-                <button class="try-free-btn"><a href="#hero">Probar Gratis</a></button>
+                <button class="try-free-btn"><a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">Probar Gratis</a></button>
                 <button class="download-btn">
-                    <a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">Descargar para PC
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="3">
-                        <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path>
-                        <path d="M7 11l5 5l5 -5"></path>
-                        <path d="M12 4l0 12"></path>
-                      </svg></a>
+                    <a href="https://buymeacoffee.com/neiverperalta">Apoyar creador</a>
                     
                 </button>
             </div>
@@ -223,6 +218,7 @@
                     <li><a href="https://www.instagram.com/revienmaker?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Mi intagram</a></li>
                     <li><a href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Mi canal de Youtube</a></li>
                     <li><a href="https://neiverperalta.vercel.app/" target="_blank" rel="noopener noreferrer">Mi Página Web Personal</a></li>
+                    <li><a href="https://buymeacoffee.com/neiverperalta" target="_blank" rel="noopener noreferrer">Comprame un café</a></li>
                 </ul>
             </div>
         </div>
