--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevNotes</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <meta name="description" content="Tu Libreta de Ideas es la forma más sencilla y poderosa de tomar notas, organizar tus pensamientos con carpetas, enriquecer tus textos con multimedia y código. ¡Descarga la app hoy!">
+    <meta name="keywords" content="bloc de notas, notas, organizar, productividad, minimalista, multimedia, código, android, ios, windows, mac, descargar">
+    <meta name="author" content="[Tu Nombre o Nombre de tu Proyecto]">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
