--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <ul class="menu">
                     <li class="dropdown">
-                        <a href="#">Sobre mí <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="2">
+                        <a href="#">Sobre el creador <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="2">
                             <path d="M6 9l6 6l6 -6"></path>
                           </svg></a>
                           <ul class="dropdown-content">
