--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevNotes</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./img/RevNotes-Logo_sin-fondo_.ico" type="image/x-icon">
 
     <meta name="description" content="Tu Libreta de Ideas es la forma más sencilla y poderosa de tomar notas, organizar tus pensamientos con carpetas, enriquecer tus textos con multimedia y código. ¡Descarga la app hoy!">
     <meta name="keywords" content="bloc de notas, notas, organizar, productividad, minimalista, multimedia, código, android, ios, windows, mac, descargar">
