--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="right-nav">
                 <a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">
-                    <button class="download-btn">
+                    <button class="download-btn descarga-gratis">
                         Descargar gratis
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="3">
                             <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path>
@@ -196,7 +196,7 @@
             <h3>Tu Libreta de Ideas</h3>
             <div class="buttons">
                 <button class="try-free-btn"><a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">Probar Gratis</a></button>
-                <button class="download-btn">
+                <button class="download-btn apoyo">
                     <a href="https://buymeacoffee.com/neiverperalta">Apoyar creador</a>
                     
                 </button>
