arreglo de links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li><a href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Youtube</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://buymeacoffee.com/neiverperalta">Donación</a></li>
+                    <li><a target="_blank" href="https://buymeacoffee.com/neiverperalta">Donación</a></li>
                 </ul>
             </div>
             <div class="right-nav">
@@ -197,7 +197,7 @@
             <div class="buttons">
                 <button class="try-free-btn"><a href="https://github.com/RevienMaker/RevNotes-Desktop/releases/download/new/RevNotes.Setup.1.0.0.exe">Probar Gratis</a></button>
                 <button class="download-btn apoyo">
-                    <a href="https://buymeacoffee.com/neiverperalta">Apoyar creador</a>
+                    <a target="_blank" href="https://buymeacoffee.com/neiverperalta">Apoyar creador</a>
                     
                 </button>
             </div>
@@ -224,10 +224,10 @@
             <div class="footer-section links">
                 <h3>Enlaces</h3>
                 <ul>
-                    <li><a href="https://www.instagram.com/revienmaker?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Mi intagram</a></li>
-                    <li><a href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Mi canal de Youtube</a></li>
-                    <li><a href="https://neiverperalta.vercel.app/" target="_blank" rel="noopener noreferrer">Mi Página Web Personal</a></li>
-                    <li><a href="https://buymeacoffee.com/neiverperalta" target="_blank" rel="noopener noreferrer">Comprame un café</a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/revienmaker?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Mi intagram</a></li>
+                    <li><a target="_blank" href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Mi canal de Youtube</a></li>
+                    <li><a target="_blank" href="https://neiverperalta.vercel.app/" target="_blank" rel="noopener noreferrer">Mi Página Web Personal</a></li>
+                    <li><a target="_blank" href="https://buymeacoffee.com/neiverperalta" target="_blank" rel="noopener noreferrer">Comprame un café</a></li>
                 </ul>
             </div>
         </div>
