--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                             <path d="M6 9l6 6l6 -6"></path>
                           </svg></a>
                           <ul class="dropdown-content">
-                            <li><a href="https://neiverperalta.vercel.app/">Sitio web</a></li>
-                            <li><a href="https://www.instagram.com/revienmaker?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
-                            <li><a href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Youtube</a></li>
+                            <li><a target="_blank" href="https://neiverperalta.vercel.app/">Sitio web</a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/revienmaker?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
+                            <li><a target="_blank" href="https://youtube.com/@revienmaker?si=BjEQUrR9LJhIRxnA">Youtube</a></li>
                         </ul>
                     </li>
                     <li><a target="_blank" href="https://buymeacoffee.com/neiverperalta">Donación</a></li>
